Added Blog Columns and Footer Column

--- a/b5/index.html
+++ b/b5/index.html
@@ -11,11 +11,7 @@
     <div class="header">
       <div class="row">
         <div class="large-12 columns">
-          <div class="row">
-            <div class="large-12 columns">
-              <img src="media/header.jpg" alt="header image">
-            </div>
-          </div>
+          <img src="media/header.jpg" alt="header image">           
         </div>
       </div>
     </div>
@@ -26,40 +22,41 @@
         <div class="row">
           <div class="large-12 columns">
             <div class="panel radius">
-              <p><strong>Tuesday, March 3</strong></p>
-              <p>Each of these includes a div.panel element so you can see where the columns are - it's not required at all for the grid.</p>
+              <p><strong>Monday, March 10</strong></p>
+              <p>TeSPA, the collegiate gaming network, will be hosting a Diablo 3: Reaper of Souls collegiate launch event! Real-life loot can be earned by official event locations, so be sure to sign-up for your chance at a Diablo 3 treasure pack. Apply online <a href="http://tespa.org/reaperlaunch/">here.</p>
+              <a href="#">Read More...</a>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="large-6 medium-6 columns">
+          <div class="large-12 columns">
             <div class="panel radius">
-              <p>Six columns</p>
+              <p><strong>Tuesday, March 4</strong></p>
+              <p>Patch 2.02 is officially LIVE! Check out the patch notes below.</p>
+              <h5><strong>General</strong></h5>
+              <ul>
+                <li>Experience requirements for Paragon 500 and above have been increased.</li>
+                <li>Disabled sound notifications for Clan and Community chat.</li>
+              </ul>
+              <h5><Strong>Bug Fixes</Strong></h5>
+              <ul>
+                <li>Gold can once again be purchased and sold on the Real Money Auction House.</li>
+                <li>Level 60 Crafted Amulets now properly require Fiery Brimstone to craft.</li>
+                <li>Sokahr the Keywarden now reflects a more reasonable amount of damage with his whirlwind attack.</li>
+                <li>The portal leading from the second Hell Rift to the Gardens of Hope 2nd Tier now functions properly.</li>
+                <li>The experience bar has been removed from the Followers UI.</li>
+                <li>The Siegebreaker Assault Beast no longer performs other actions during his grab attack animation.</li>
+              </ul>
+
+              <a href="#">Read More...</a>
             </div>
           </div>
-          <div class="large-6 medium-6 columns">
+          <div class="large-12 columns">
             <div class="panel radius">
-              <p>Six columns</p>
+              <p><strong>Monday, March 3</strong></p>
+              <p>Blizzard announces a new character class to join the fight against evil. The Crusader is a strong, tanky unit that focuses on heavy shield play, defensively and offensively. Specializing in the Strenght attribute, the Crusader will surely put a hurt on the minions of Diablo and Death itself.</p>
+              <a href="#">Read More...</a>
             </div>
           </div>
-        </div>
-        <div class="row">
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="panel radius">
-              <p>Four columns</p>
-            </div>
-          </div>
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="panel radius">
-              <p>Four columns</p>
-            </div>
-          </div>
-          <div class="large-4 medium-4 small-4 columns">
-            <div class="panel radius">
-              <p>Four columns</p>
-            </div>
-          </div>
-        </div>
+        </div>       
         
         <hr />
       </div> <!-- End Large Left Column -->    
@@ -87,7 +84,14 @@
             </form>
         </div>
       </div> <!-- End Right Side-Column -->
+    </div> <!-- End Large Dual Grid -->
 
+    <div class="row">
+      <div class="large-12 columns">
+        <div class="panel radius">
+          <p>All data collected has been checked to the best of our abilities but may contain errors. We are not liable for any complications concerning misinformation printed on this page. If you do find errors on inconsistencies, please contact our webmaster  <a href="mailto:webmaster@diablo3news.com" target="_top">here.</a>
+        </div>
+      </div>
     </div>
     
     <script src="js/vendor/jquery.js"></script>
