--- a/b6/index.html
+++ b/b6/index.html
@@ -18,5 +18,38 @@
         <p>Dexmedetomidine is indicated for sedation of critically ill or injured patients in an intensive care unit setting. Its indication in the US was recently expanded to include nonintubated patient requiring sedation for surgery or procedures short-term. It is also useful as an adjunct for sedation and general anesthesia in the setting of certain operations and invasive medical procedures, such as colonoscopy. There are no absolute contraindications to the use of dexmedetomidine. Limiting its usefulness is the caution that the drug cannot be bolused due to concerns about peripheral α2-receptor stimulation with resulting hypotension and bradycardia, combined with its current high cost relative to generic medications such as propofol, fentanyl and midazolam which can achieve similar clinical effects.</p>
 	</div>
 </div>
+
+<div id="sidedata">
+    <div id="dataone">
+        <h4><strong>Dexmedetomidine</strong></h4>
+            <h5>Systematic (IUPAC) name</h5>
+                <p>(S)-4-[1-(2,3-Dimethylphenyl)ethyl]-3H-imidazole</p>
+            <h5>Clinical data</h5>
+                <p>Trade names:	Precedex</p>
+                <p>Pregnancy cat.:	C (US)</p>
+                <p>Legal status:	℞-only (US)</p>
+                <p>Routes:	Intravenous infusion only</p>
+            <h5>Pharmacokinetic data</h5>
+                <p>Protein binding	94%</p>
+                <p>Half-life	2 hours</p>
+                <p>Excretion	Urinary</p>
+ 	</div>
+    <div id="datatwo">
+            <h5>Identifiers</h5>
+                <p>CAS number:	113775-47-6</p>
+                <p>ATC code	N05CM18</p>
+                <p>PubChem	CID 68602</p>
+                <p>DrugBank	DB00633</p>
+                <p>hemSpider	4470605</p>
+                <p>UNII	67VB76HONO</p>
+                <p>KEGG	D00514</p>
+                <p>ChEBI	CHEBI:4466</p>
+                <p>ChEMBL	CHEMBL778</p>
+            <h5>Chemical data</h5>
+                <p>Formula	C13H16N2</p>
+                <p>Mol. mass	200.28 g/mol</p>
+  	</div>
+</div>
+
 </body>
 </html>
