--- a/b6/index.html
+++ b/b6/index.html
@@ -3,7 +3,7 @@
 <head>
 <meta http-equiv="Content-Type" content="text/html; charset=UTF-8" />
 <title>B6: Position with RWD</title>
-<link href="css/styles.css" type="text/css" rel="stylesheet"/>
+<link href="css/main.css" type="text/css" rel="stylesheet"/>
 </head>
 
 <body>
